Fix Sonar issues: remove deprecated SignatureAlgorithm, unused field; prefer Stream.toList()
Co-Authored-By: milind@cognition.ai <milind@cognition.ai>